# beautiful-number

./: CMakeLists.txt  compile_flags.txt  readme.md  task.cpp  task.txt
